--- a/landing/mini.html
+++ b/landing/mini.html
@@ -5,6 +5,9 @@
         <title>Landing-page constructor</title>
     </head>
     <body style='background:#ffffff;'>
-            <input type="text" value='1'/>
+             <!-------------Блок "Form"-------------------------->
+    <form>    <input type="submit" value='1'/>    <input type="submit" value='2'/>    <input type="text" value='3'/>    </form>
+    <!-------------Кoнец блокa "Form"-------------------->
+
     </body>
 </html>
