fixed problem with landing page creating

--- a/landing/mini.html
+++ b/landing/mini.html
@@ -2,31 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>example</title>
+        <title>Landing-page constructor</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <link rel="stylesheet" href="../carousel/carousel.css">
     </head>
-    <body style='background:#7f2e2e;'>
+    <body style='background:#ffffff;'>
             <!-------------Блок "Header"-------------------------->
     <div class='header'>
-        <h1 style='text-align:center;'>header </h1>
+        <h1 style='text-align:left;'>header </h1>
         <img src='../images/logo.png' style='width:100px;height:100px;'>
     </div>
     <!------------- Кoнец блокa "Header"-------------------->
-     <!-------------Блок "Text"-------------------------->
-    <div class='text'>
-       text
-    </div>
-    <!-------------Кoнец блокa "Text"-------------------->
-     <!-------------Блок "Slider"-------------------------->
-     <div class="carousel">        <a class='carousel-item'><img class='slider_images' src='../images/slider-element1.png'></a>        <a class='carousel-item'><img class='slider_images' src='../images/slider-element2.png'></a>        <a class='carousel-item'><img class='slider_images' src='../images/slider-element3.png'></a>    </div>
-    <!-------------Кoнец блокa "Slider"-------------------->
-    <!-------------Блок "Footer"-------------------------->
-    <div class='footer'>
-        <h1>footer </h1>
-    </div>
-    <!------------- Кoнец блокa "Footer"-------------------->
 
         <script src="../carousel/carousel.js"></script>
     </body>
