added opportunity to set paragraphs and javascript was replaced with jQuery. Also other small changes is available

--- a/landing/mini.html
+++ b/landing/mini.html
@@ -6,7 +6,17 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </head>
+    <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+    } 
+    </style>
     <body style='background:#ffffff;'>
-        
+             <!-------------Блок "Links"-------------------------->
+    <form>        <a class="btn" href="https://materializecss.com/buttons.html">111111</a>        <a class="btn" href="343">12121</a>    </form>
+    <!-------------Кoнец блокa "Links"-------------------->
+
     </body>
 </html>
