--- a/landing/mini.html
+++ b/landing/mini.html
@@ -2,42 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>title</title>
+        <title>Landing-page constructor</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body style='background:#cb8686;'>
-            <!-------------Блок "Header"-------------------------->
-    <div class='header'>    <div class="parallax-container">
-        <div class="parallax"><img src="./images/b_image/b_image.png"></div>
-    </div>
-    <script src="parallax.js"></script>    <h1 style='margin:0;text-align:center;background-color:transparent'>header </h1>    </div>
-    <!------------- Кoнец блокa "Header"-------------------->
-     <!-------------Блок "Texts"-------------------------->
-     <div id="main" style="text-align:center;">    <h3 style='background:#ffffff;color:#000000;'>
-       h3
-    </h3>    <p style='background:#ffffff;color:#000000;'>
-       par
-    </p>    <span style='background:#ffffff;color:#000000;'>
-       span
-    </span>    </div>
-    <!-------------Кoнец блокa "Texts"-------------------->
-     <!-------------Блок "Form"-------------------------->
-    <form action="action.php" method="post">    <input type="submit" name="submit1" value='1' style="height:auto; width:auto; border: 1px solid black;"/>    <input type="text" name="text2" value='2' style="height:auto; width:auto; border: 1px solid black;"/>    </form>
-    <!-------------Кoнец блокa "Form"-------------------->
-     <!-------------Блок "Links"-------------------------->
-    <form>        <a class="btn" href="1">1</a>    </form>
-    <!-------------Кoнец блокa "Links"-------------------->
-     <!-------------Блок "Slider"-------------------------->
-     <div class="carousel">        <a class='carousel-item'><img class='slider_images' style='width:300px;' src='../landing/images/slider/slider-element1.png'></a>        <a class='carousel-item'><img class='slider_images' style='width:300px;' src='../landing/images/slider/slider-element2.png'></a>    </div>
+    <body style='background:#ffffff;'>
+             <!-------------Блок "Slider"-------------------------->
+     <div class="carousel" style="margin:20px;">        <a class='carousel-item'><img class='slider_images' style='width:300px;' src='../landing/images/slider/slider-element1.png'></a>        <a class='carousel-item'><img class='slider_images' style='width:300px;' src='../landing/images/slider/slider-element2.png'></a>    </div>
     <script src="./carousel.js"></script>
     <!-------------Кoнец блокa "Slider"-------------------->
-    <!-------------Блок "Footer"-------------------------->
-    <div class='footer'>
-        <h1 style='margin:0;text-align:center;background:#ff0000;color:#000000;'>footer </h1>
-    </div>
-    <!------------- Кoнец блокa "Footer"-------------------->
 
     </body>
 </html>
