--- a/landing/mini.html
+++ b/landing/mini.html
@@ -8,10 +8,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style='background:#ffffff;'>
-             <!-------------Блок "Slider"-------------------------->
-     <div class="carousel" style="margin:20px;">        <a class='carousel-item'><img class='slider_images' style='width:300px;' src='../landing/images/slider/slider-element1.png'></a>        <a class='carousel-item'><img class='slider_images' style='width:300px;' src='../landing/images/slider/slider-element2.png'></a>    </div>
-    <script src="./carousel.js"></script>
-    <!-------------Кoнец блокa "Slider"-------------------->
+             <!-------------Блок "Texts"-------------------------->
+     <div id="main" style="text-align:center;margin-left:20px;margin-right:20px;">    <p style='background:#ffffff;color:#000000;padding:20px;'>
+       1
+    </p>    <p style='background:#ffffff;color:#000000;padding:20px;'>
+       2
+    </p>    <p style='background:#ffffff;color:#000000;padding:20px;'>
+       3
+    </p>    <p style='background:#ffffff;color:#000000;padding:20px;'>
+       4
+    </p>    </div>
+    <!-------------Кoнец блокa "Texts"-------------------->
 
     </body>
 </html>
