--- a/landing/mini.html
+++ b/landing/mini.html
@@ -8,17 +8,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style='background:#ffffff;'>
-             <!-------------Блок "Texts"-------------------------->
-     <div id="main" style="text-align:center;margin-left:20px;margin-right:20px;">    <p style='background:#ffffff;color:#000000;padding:20px;'>
-       1
-    </p>    <p style='background:#ffffff;color:#000000;padding:20px;'>
-       2
-    </p>    <p style='background:#ffffff;color:#000000;padding:20px;'>
-       3
-    </p>    <p style='background:#ffffff;color:#000000;padding:20px;'>
-       4
-    </p>    </div>
-    <!-------------Кoнец блокa "Texts"-------------------->
+             <!-------------Блок "CTA"-------------------------->
+     <a class="btn" style='margin-left: auto;margin-right: auto;display:block;margin-top:20px;margin-bottom:20px;background:#ef6b6b;color:#ffffff;width:300px;' href="https://forms.gle/hRRauA7JNr5nXcRA9">Click!</a>
+    <!-------------Кoнец блокa "CTA"-------------------->
+     <!-------------Блок "Links"-------------------------->
+    <div style="margin-left:20px;margin-right:20px;text-align:center;">        <a class="btn" style="color:#000000;background:#ffffff;" href="https://classroom.google.com/u/2/c/NTI3MTY1NjM5NzAw">1</a>        <a class="btn" style="color:#000000;background:#ffffff;" href="https://freelancehunt.com/verification">2</a>    </div>
+    <!-------------Кoнец блокa "Links"-------------------->
 
     </body>
 </html>
