--- a/landing/mini.html
+++ b/landing/mini.html
@@ -8,12 +8,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style='background:#ffffff;'>
-             <!-------------Блок "CTA"-------------------------->
-     <a class="btn" style='margin-left: auto;margin-right: auto;display:block;margin-top:20px;margin-bottom:20px;background:#ef6b6b;color:#ffffff;width:300px;' href="https://forms.gle/hRRauA7JNr5nXcRA9">Click!</a>
-    <!-------------Кoнец блокa "CTA"-------------------->
-     <!-------------Блок "Links"-------------------------->
-    <div style="margin-left:20px;margin-right:20px;text-align:center;">        <a class="btn" style="color:#000000;background:#ffffff;" href="https://classroom.google.com/u/2/c/NTI3MTY1NjM5NzAw">1</a>        <a class="btn" style="color:#000000;background:#ffffff;" href="https://freelancehunt.com/verification">2</a>    </div>
-    <!-------------Кoнец блокa "Links"-------------------->
+             <!-------------Блок "Slider"-------------------------->
+     <div class="carousel">        <a class='carousel-item' style='width:300px;'><img class='slider_images' src='../landing/images/slider/slider-element1.png'></a>        <a class='carousel-item' style='width:300px;'><img class='slider_images' src='../landing/images/slider/slider-element2.png'></a>        <a class='carousel-item' style='width:300px;'><img class='slider_images' src='../landing/images/slider/slider-element3.png'></a>    </div>
+    <script src="./carousel.js"></script>
+    <!-------------Кoнец блокa "Slider"-------------------->
 
     </body>
 </html>
