Added the ability to set a footer

--- a/landing/mini.html
+++ b/landing/mini.html
@@ -8,19 +8,30 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style='background:#ffffff;'>
-             <!-------------Блок "Navbar"-------------------------->
-     <nav style="padding-left:20%;padding-right:20%;background:#21343f;">
-     <div class="nav-wrapper">
-         <a href="mini.html" class="brand-logo">Palmeria</a>
-         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-         <ul class="right hide-on-med-and-down">        <li><a style="color:#ffffff;" href="">Menu</a></li>        <li><a style="color:#ffffff;" href="">About Us</a></li>        </ul>
+                <!-------------Блок 'Footer'-------------------------->
+        <footer style='background:#ffffff;' class='page-footer'>
+    <div class='container'>
+      <div class='row valign-wrapper'>
+        <div class='center-align col l6 s12'>
+        <h5 style='color:#000000;'>Logot</h5>
+            </div>        <div class="col l3 s12">
+              <h5 style='color:#000000;'>col1</h5>
+              <ul>        <li><a style='color:#000000;' href="#!">e1</a></li>        <li><a style='color:#000000;' href="#!">e2</a></li>        <li><a style='color:#000000;' href="#!">e3</a></li>        <li><a style='color:#000000;' href="#!">e4</a></li>        <li><a style='color:#000000;' href="#!">5</a></li>        </ul>
+        </div>        <div class="col l3 s12">
+              <h5 style='color:#000000;'>col2</h5>
+              <ul>        <li><a style='color:#000000;' href="#!">1</a></li>        <li><a style='color:#000000;' href="#!">2</a></li>        <li><a style='color:#000000;' href="#!">3</a></li>        </ul>
+        </div>        <div class="col l3 s12">
+              <h5 style='color:#000000;'>col3</h5>
+              <ul>        <li><a style='color:#000000;' href="#!">1</a></li>        <li><a style='color:#000000;' href="#!">2</a></li>        <li><a style='color:#000000;' href="#!">3</a></li>        <li><a style='color:#000000;' href="#!">4</a></li>        </ul>
+        </div>        </div>
         </div>
-    </nav>
-
-    <ul class="sidenav" id="mobile-demo">        <li><a style="color:#ffffff;" href="">Menu</a></li>        <li><a style="color:#ffffff;" href="">About Us</a></li>        </ul>
-    <!-------------Кoнец блокa "Navbar"-------------------->
-        <div class='header' style="background-color:#55aa7e;text-align:center;padding:50px;">    <h1 class="aligned-header" style="margin:0;color:#195d2d;">Palmeria</h1>    </div>
-    <!------------- Кoнец блокa "Header"-------------------->
+        <div class="footer-copyright">
+          <div class="container">
+          Made by <a style='color:#000000;' class="text-lighten-3">Logot</a>
+          </div>
+          </div>
+        </footer>
+    <!------------- Кoнец блокa 'Footer'-------------------->
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="./materialize.js"></script>
