added the ability to set link for column elements in footer

--- a/landing/mini.html
+++ b/landing/mini.html
@@ -16,13 +16,10 @@
         <h5 style='color:#000000;'>Logot</h5>
             </div>        <div class="col l3 s12">
               <h5 style='color:#000000;'>col1</h5>
-              <ul>        <li><a style='color:#000000;' href="#!">e1</a></li>        <li><a style='color:#000000;' href="#!">e2</a></li>        <li><a style='color:#000000;' href="#!">e3</a></li>        <li><a style='color:#000000;' href="#!">e4</a></li>        <li><a style='color:#000000;' href="#!">5</a></li>        </ul>
+              <ul>        <li><a style='color:#000000;' href="http://php.web-online.net.ua/1-2-ustanovka-i-nastrojka-po-distributivy-xamp-integrirovannaya-sreda-razrabotki-netbeans-konsolnoe-prilozhenie-php/">e1</a></li>        <li><a style='color:#000000;' href=""></a></li>        <li><a style='color:#000000;' href="http://php.web-online.net.ua/1-2-ustanovka-i-nastrojka-po-distributivy-xamp-integrirovannaya-sreda-razrabotki-netbeans-konsolnoe-prilozhenie-php/">e2</a></li>        <li><a style='color:#000000;' href=""></a></li>        </ul>
         </div>        <div class="col l3 s12">
               <h5 style='color:#000000;'>col2</h5>
-              <ul>        <li><a style='color:#000000;' href="#!">1</a></li>        <li><a style='color:#000000;' href="#!">2</a></li>        <li><a style='color:#000000;' href="#!">3</a></li>        </ul>
-        </div>        <div class="col l3 s12">
-              <h5 style='color:#000000;'>col3</h5>
-              <ul>        <li><a style='color:#000000;' href="#!">1</a></li>        <li><a style='color:#000000;' href="#!">2</a></li>        <li><a style='color:#000000;' href="#!">3</a></li>        <li><a style='color:#000000;' href="#!">4</a></li>        </ul>
+              <ul>        <li><a style='color:#000000;' href="#">e3</a></li>        <li><a style='color:#000000;' href=""></a></li>        </ul>
         </div>        </div>
         </div>
         <div class="footer-copyright">
